	(twittering-tinyurl-get): reimplemented with
	`twittering-send-http-request'. In addition, the query parameter
	is correcly encoded by `twittering-percent-encode'.

	* twittering-mode.el: Add `is.gd' as a URL shortening service.
	Thanks to Michael Kohl.
	(twittering-tinyurl-service): update the document.
	(twittering-tinyurl-services-map): add an entry for `is.gd'.

2011-01-23  Tadashi MATSUO  <tad@mymail.twin.jp>

	* test/test-twittering-mode.el: Add some tests for the format
	specifiers "%FILL[prefix]{...}" and "%FOLD[prefix]{...}".
	* twittering-mode.el (twittering-status-format): add a document
	for the format specifier "%FOLD[prefix]{...}".

	* test/test-twittering-mode.el: Fix an error of
	`url-generic-parse-url' on Emacs21 by calling
	`url-scheme-get-property' before `url-generic-parse-url' is called.

2011-01-21  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Decode received XML document as UTF-8 before
	parsing it.
	(twittering-http-get-default-sentinel): decode received XML
	document as UTF-8 before parsing it if Content-Type in response
	header has a parameter "charset=utf-8".

	* twittering-mode.el: The format specifier "%FOLD[prefix]{...}"
	does not squeeze white spaces.
	(twittering-fill-string): does not squeeze white spaces if
	`keep-newline' is non-nil.

2011-01-16  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Ensure that the pointed tweet is visible on
	editing a tweet.
	(twittering-ensure-whole-of-status-is-visible): new function.

	* twittering-mode.el: Isolate addition of text properties from a
	function parsing XML.
	(twittering-http-get-default-sentinel): call
	`twittering-make-clickable-status-datum' here.
	(twittering-atom-xmltree-to-status): do not add text properties to
	statuses.
	(twittering-status-to-status-datum): likewise.

	* twittering-mode.el: Render statuses in order of field property
	instead of id property.
	(twittering-make-common-properties): add field property as a
	common property.