@@ -119,14 +119,38 @@ on authorization via OAuth.")
 The upper limit is `twittering-max-number-of-tweets-on-retrieval'.")
 
 (defvar twittering-tinyurl-service 'tinyurl
-  "*The service to shorten URI. One of 'tinyurl', 'toly' or 'is.gd'.
+  "*The service to shorten URI.
 This must be one of key symbols of `twittering-tinyurl-services-map'.")
 
 (defvar twittering-tinyurl-services-map
   '((is.gd . "http://is.gd/create.php?format=simple&url=")
     (tinyurl . "http://tinyurl.com/api-create.php?url=")
-    (toly    . "http://to.ly/api.php?longurl="))
-  "Alist of URL shortening services.")
+    (toly
+     (lambda (service longurl)
+       (twittering-make-http-request-from-uri
+	"POST" nil
+	"http://to.ly/api.php"
+	(concat "longurl=" (twittering-percent-encode longurl))))))
+  "Alist of URL shortening services.
+The key is a symbol specifying the service.
+The value is a string or a list consisting of two elements at most.
+
+If the value is a string, `(concat THE-FIRST-ELEMENT longurl)' is used as the
+URL invoking the service.
+If the value is a list, it is interpreted as follows.
+The first element specifies how to make a HTTP request for shortening a URL.
+If the first element is a string, `(concat THE-FIRST-ELEMENT longurl)' is
+used as the URL invoking the service.
+If the first element is a function, it is called as `(funcall THE-FIRST-ELEMENT
+service-symbol longurl)' to obtain a HTTP request alist for invoking the
+service, which must be generated by `twittering-make-http-request'.
+
+The second element specifies how to post-process a HTTP reply by the HTTP
+request.
+If the second element is nil, the reply is directly used as a shortened URL.
+If the second element is a function, it is called as `(funcall
+THE-SECOND-ELEMENT service-symbol HTTP-reply-string)' and its result is used
+as a shortened URL.")
 
 (defvar twittering-mode-map (make-sparse-keymap))
 (defvar twittering-mode-menu-on-uri-map (make-sparse-keymap "Twittering Mode"))
@@ -2898,18 +2922,36 @@ BEG and END mean a region that had been modified."
 ;;;; URI shortening
 ;;;;
 
-(defun twittering-tinyurl-get (longurl)
+(defun twittering-tinyurl-get (longurl &optional service)
   "Shorten LONGURL with the service specified by `twittering-tinyurl-service'."
-  (let* ((api (cdr (assoc twittering-tinyurl-service
-			  twittering-tinyurl-services-map)))
-	 (uri (concat api (twittering-percent-encode longurl))))
-    (unless api
-      (error "Invalid `twittering-tinyurl-service'. try one of %s"
-	     (mapconcat (lambda (x)
-			  (symbol-name (car x)))
-			twittering-tinyurl-services-map ", ")))
-    (let ((request (twittering-make-http-request-from-uri "GET" nil uri))
-	  (additional-info `((longurl . ,longurl))))
+  (let* ((service (or service twittering-tinyurl-service))
+	 (api (cdr (assq service twittering-tinyurl-services-map)))
+	 (request-generator (when (listp api) (elt api 0)))
+	 (post-process (when (listp api) (elt api 1)))
+	 (encoded-url (twittering-percent-encode longurl))
+	 (request
+	  (cond
+	   ((stringp api)
+	    (twittering-make-http-request-from-uri
+	     "GET" nil (concat api encoded-url)))
+	   ((stringp request-generator)
+	    (twittering-make-http-request-from-uri
+	     "GET" nil (concat request-generator encoded-url)))
+	   ((functionp request-generator)
+	    (funcall request-generator service longurl))
+	   (t
+	    (error "%s is invalid. try one of %s"
+		   (symbol-name service)
+		   (mapconcat (lambda (x) (symbol-name (car x)))
+			      twittering-tinyurl-services-map ", "))
+	    nil)))
+	 (additional-info `((longurl . ,longurl))))
+    (cond
+     ((null request)
+      (error "Failed to generate a HTTP request for shortening %s with %s"
+	     longurl (symbol-name service))
+      nil)
+     (t
       (lexical-let ((result 'queried))
 	(twittering-send-http-request
 	 request additional-info
@@ -2930,7 +2972,14 @@ BEG and END mean a region that had been modified."
 	     (setq result nil))))
 	(while (eq result 'queried)
 	  (sit-for 0.1))
-	result))))
+	(let ((processed-result (if (and result (functionp post-process))
+				    (funcall post-process service result)
+				  result)))
+	  (if processed-result
+	      processed-result
+	    (error "Failed to shorten a URL %s with %s"
+		   longurl (symbol-name service))
+	    nil)))))))
 
 (defun twittering-tinyurl-replace-at-point ()
   "Replace the url at point with a tiny version."
